--- a/includes.tex
+++ b/includes.tex
@@ -1,6 +1,8 @@
 \usepackage{setspace}
 \usepackage[a4paper,hmargin=2.8cm,vmargin=2.0cm,includeheadfoot]{geometry}
 \usepackage{indentfirst}
+%\usepackage{dirtytalk}
+%\usepackage [autostyle, english = american]{csquotes}
 
 \usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
