--- a/intro.tex
+++ b/intro.tex
@@ -23,7 +23,7 @@ When a patient is admitted with a head injury, common methods for prognosis incl
 
 Prognostic models \cite{Steyerberg2008} have been developed from the IMPACT database \cite{Maas2007} that take into account several patient characteristics, such as age, hypotension, and haemoglobin levels, to predict the patient's outcome after six months using odds ratios. These high complexity models allow for clinicians to plan treatment based on the prognosis, however it is still not a method to diagnose a patient, merely predict the outcome. 
 
-Early diagnosis is crucial for the best recovery, and to do so, there is a need to continuously monitor the patient and receive quantitative data in real time for accurate diagnosis. The Boutelle Research Group have been looking into utilising brain signals that are associated with TBI. From the primary injury site, spreading depolarisation (SD) waves \cite{Leao1944} propagate into surrounding brain tissue and cause secondary damage \cite{Brain2011}. Research has shown that monitoring SDs provides more information than routine clinical checkups \cite{Hartings2011}. An SD is characterised by the cells in the injury sites having a high energy demand to repolarise the membrane potential, hence the glucose concentration in the extracellular fluid transiently decreases by approximately 18-93$\mu M$. The cells tend to undergo anaerobic respiration during this period, so the extracellular lactate concentration transiently increase by 5-100$\mu M$ \cite{D.2010}. Glucose and lactate have been declared by the International Microdialysis Collaborative Group as the most clinically useful signals for the prognosis of TBI \cite{Hutchinson2015} so these transient changes are useful to monitor in high time resolution. Furthermore, during the same transient period, the potassium ion concentration increases \cite{Rogers2011} from 3$mM$ \cite{Katzman1976} to 30-50$mM$ \cite{Ayata2015} due to the cells depolarising. 
+Early diagnosis is crucial for the best recovery, and to do so, there is a need to continuously monitor the patient and receive quantitative data in real time for accurate diagnosis. The Boutelle Research Group have been looking into utilising brain signals that are associated with TBI. From the primary injury site, spreading depolarisation (SD) waves \cite{Leao1944} propagate into surrounding brain tissue and cause secondary damage \cite{Brain2011}. Research has shown that monitoring SDs provides more information than routine clinical checkups \cite{Hartings2011}. A SD is characterised by the cells in the injury sites having a high energy demand to repolarise the membrane potential, hence the glucose concentration in the extracellular fluid transiently decreases by approximately 18-93$\mu M$. The cells tend to undergo anaerobic respiration during this period, so the extracellular lactate concentration transiently increase by 5-100$\mu M$ \cite{D.2010}. Glucose and lactate have been declared by the International Microdialysis Collaborative Group as the most clinically useful signals for the prognosis of TBI \cite{Hutchinson2015} so these transient changes are useful to monitor in high time resolution. Furthermore, during the same transient period, the potassium ion concentration increases \cite{Rogers2011} from 3$mM$ \cite{Katzman1976} to 30-50$mM$ \cite{Ayata2015} due to the cells depolarising. 
 
 
 \begin{figure}[t!]
@@ -42,5 +42,5 @@ To collect data from the patient, the microfluidic analysis system has to be pla
 
 
 \subsection{Aim}
-This project aims to develop a wireless communication system between the coMD system and an iOS application. Information from the three electrochemical sensors will be received simultaneously in an iPad application in real time to allow for continuous monitoring of the patient. The app must be user friendly and be of high quality as it aims to be used by a clinician to monitor the state of the patient. It is desirable for the app to contain features that allows for easy use and easy readability of the data presented. It is important that the signals are transmitted and displayed accurately so suitable processing methods need to be implemented. 
+This project aims to develop a wireless communication system between the coMD system and an iOS application. Information from the three electrochemical sensors will be received simultaneously in an iPad application in real time to allow for continuous monitoring of the patient in high temporal resolution. The app must be user friendly and be of high quality as it aims to be used by a clinician to monitor the state of the patient. It is desirable for the app to contain features that allows for easy use and easy readability of the data presented. It is important that the signals are transmitted and displayed accurately so suitable processing methods need to be implemented. 
 
