--- a/report.tex
+++ b/report.tex
@@ -4,10 +4,9 @@
 
 \begin{document}
 
-\input{titlepage.tex}
+%\input{titlepage.tex}
 
-\begin{abstract}
-    250 words to summarise the project
+%\begin{abstract}
     % Sentence of two about TBI and secondary TBI
     % Sentence about aim of the project
     % Sentence about the prototype
@@ -16,9 +15,9 @@
     % Summarise results/discussion about testing
     % Future improvements
     
-\end{abstract}
+%\end{abstract}
 
-\newpage
+%\newpage
 
 
 \section{Introduction}
@@ -43,25 +42,25 @@
 
 
 
-\section{Acknowledgements}
-I would like to thank Professor Martyn Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understanding the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
+%\section{Acknowledgements}
+%I would like to thank Professor Martyn Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understanding the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
 
-Finally, I would like to thank my parents for believing in me more than I could ever believe in myself, and Rohan for always supporting me through the highs and lows of this project.
+%Finally, I would like to thank my parents, Dr. Jayaprakash Pattar and Dr. Jyothsna Murthy, for believing in me more than I could ever believe in myself, and Rohan Padmanabhan for always supporting me through the highs and lows of this project.
 
-\newpage
+%\newpage
 \bibliography{library.bib}
 \bibliographystyle{unsrt}
 
-\newpage
+%\newpage
 
-\appendix
+%\appendix
 
-\section{Appendix: Project Code}
-\label{appendix: a}
-\begin{itemize}
-    \item Firmware code can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-arduino}
-    \item iPad app development can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-app2}
-\end{itemize}
+%\section{Appendix: Project Code}
+%\label{appendix: a}
+%\begin{itemize}
+%    \item Firmware code can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-arduino}
+ %   \item iPad app development can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-app2}
+%\end{itemize}
 
 
 \end{document}
