--- a/results.tex
+++ b/results.tex
@@ -4,12 +4,12 @@
 \centering
 \includegraphics[trim={0cm 0cm 0cm  0cm}, clip, width=.75\textwidth]{./figures/standardsignals/picologChemComp.pdf}
 \captionsetup{justification=centering}
-\caption{Standard signals recorded using a PicoScope}
+\caption{Standard signals recorded using a PicoScope.}
 \label{fig: test1 picolog}
 \bigbreak
 \includegraphics[trim={0cm 0cm 0cm  0cm}, clip, width=.75\textwidth]{./figures/standardsignals/appChemComp.pdf}
 \captionsetup{justification=centering}
-\caption{Standard signals recorded using the iPad app}
+\caption{Standard signals recorded using the iPad app.}
 \label{fig: test1 app}
 \end{figure}
 
