--- a/titlepage.tex
+++ b/titlepage.tex
@@ -55,7 +55,7 @@ Professor Martyn G. Boutelle
 \end{center}
 
 \vspace{2.5cm}
-June 2019   \hfill  Word Count:
+June 2019   \hfill  Word Count: 5995
 
 \vfill % Fill the rest of the page with whitespace
 
